@@ -1,3 +1,8 @@
+2013-01-17  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* mmap.cc (handler_disk_file::msync): Retry up to 99 times if
+	FlushViewOFile fails with ERROR_LOCK_VIOLATION.
+
 2013-01-16  Christopher Faylor  <me.cygwin2013@cgf.cx>
 
 	* sigproc.cc (no_signals_available): Finally remove this macro
